--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     },
     "autoload":{
         "psr-4":{
-            "Wechat\\Pay\\":"pay/"
+            "Wechat\\Pay\\":"pay/",
+            "Wechat\\Weapp\\":"weapp/"
         }
     }
 }
