添加小程序订阅模板消息功能

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "Apache-2.0",
     "authors": [
         {
-            "name": "xwzj",
+            "name": "陈星星",
             "email": "13246190524@163.com"
         }
     ],
