修改数据返回结果类型,添加腾讯定位相关sdk,添加开放用户信息相关,添加小程序订阅消息相关

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "autoload":{
         "psr-4":{
             "Wechat\\Pay\\":"pay/",
-            "Wechat\\Weapp\\":"weapp/"
+            "Wechat\\Weapp\\":"weapp/",
+            "Wechat\\Lbs\\":"lbs/"
         }
     }
 }
