修改Request不存在问题

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "autoload":{
         "psr-4":{
+            "Wechat\\Curl\\":"curl/",
             "Wechat\\Pay\\":"pay/",
             "Wechat\\Weapp\\":"weapp/",
             "Wechat\\Lbs\\":"lbs/"
